--- a/app/src/main/res/layout/activity_resource.xml
+++ b/app/src/main/res/layout/activity_resource.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ResourceActivity">
+    tools:context=".ResourceActivity"
+    android:background="@color/background">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -25,7 +26,7 @@
         <TextView
             android:id="@+id/tvTitle"
             android:layout_width="match_parent"
-            android:layout_height="55dp"
+            android:layout_height="40dp"
             android:padding="10dp"
             android:hint="@string/resource_page"
             android:textAlignment="center"
@@ -35,10 +36,25 @@
             android:textStyle="bold"
             android:layout_weight=".2"/>
 
+        <androidx.appcompat.widget.SearchView
+            android:id="@+id/searchView"
+            android:layout_width="match_parent"
+            android:layout_height="45dp"
+            app:iconifiedByDefault="false"
+            app:queryHint="@string/search"
+            app:defaultQueryHint="@string/search"
+            android:autofillHints="search"
+            android:background="@drawable/search_border"
+            android:padding="5dp"
+            android:layout_marginBottom="5dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tvTitle"/>
+
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@drawable/border"
             android:paddingLeft="5dp"
             android:paddingRight="5dp">
 
@@ -59,7 +75,8 @@
                             android:textStyle="bold"
                             android:padding="10dp"
                             android:gravity="center"
-                            android:layout_column="1" />
+                            android:layout_column="1"
+                            android:background="@drawable/table_title_border"/>
                         <TextView
                             android:layout_width="200dp"
                             android:text="Assigned To"
@@ -67,7 +84,8 @@
                             android:textStyle="bold"
                             android:padding="10dp"
                             android:gravity="center"
-                            android:layout_column="1"/>
+                            android:layout_column="1"
+                            android:background="@drawable/table_title_border"/>
                         <TextView
                             android:layout_width="200dp"
                             android:text="Hired Date"
@@ -75,15 +93,44 @@
                             android:textStyle="bold"
                             android:padding="10dp"
                             android:gravity="center"
-                            android:layout_column="1"/>
+                            android:layout_column="1"
+                            android:background="@drawable/table_title_border"/>
+                        <TextView
+                            android:layout_width="200dp"
+                            android:text="State"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_column="1"
+                            android:background="@drawable/table_title_border"/>
+                        <TextView
+                            android:layout_width="200dp"
+                            android:text="JobLevel"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_column="1"
+                            android:background="@drawable/table_title_border"/>
+                        <TextView
+                            android:layout_width="200dp"
+                            android:text="Project"
+                            android:textSize="16sp"
+                            android:textStyle="bold"
+                            android:padding="10dp"
+                            android:gravity="center"
+                            android:layout_column="1"
+                            android:background="@drawable/table_title_border"/>
                     </TableRow>
 
                     <androidx.recyclerview.widget.RecyclerView
                         android:id="@+id/rvListCommunityMember"
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:background="@drawable/table_details_border"
                         tools:itemCount="3"
-                        tools:listitem="@layout/item_community_member"/>
+                        tools:listitem="@layout/item_community_member" />
                 </TableLayout>
             </HorizontalScrollView>
 
