--- a/app/src/main/res/layout/item_community_member.xml
+++ b/app/src/main/res/layout/item_community_member.xml
@@ -1,32 +1,74 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:stretchColumns="1,2,3">
-    <TableRow>
+    android:stretchColumns="1,2,3,4,5,6">
+
         <TextView
-            android:layout_width="200dp"
             android:id="@+id/tvName"
-            android:text="ID"
-            android:textSize="16sp"
-            android:padding="10dp"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:layout_column="1"
             android:layout_gravity="center"
-            android:layout_column="1"/>
+            android:gravity="center"
+            android:background="@drawable/table_details_border"
+            android:padding="10dp"
+            android:text="ID"
+            android:textSize="16sp" />
         <TextView
             android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:id="@+id/tvAssignedTo"
             android:text="ID"
             android:textSize="16sp"
             android:padding="10dp"
             android:layout_gravity="center"
-            android:layout_column="1"/>
+            android:gravity="center"
+            android:layout_column="1"
+            android:background="@drawable/table_details_border"/>
         <TextView
             android:layout_width="200dp"
+            android:layout_height="wrap_content"
             android:id="@+id/tvHiredDate"
             android:text="ID"
             android:textSize="16sp"
             android:padding="10dp"
             android:layout_gravity="center"
-            android:layout_column="1"/>
-    </TableRow>
-</TableLayout>
+            android:gravity="center"
+            android:layout_column="1"
+            android:background="@drawable/table_details_border"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvState"
+            android:text="ID"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_column="1"
+            android:background="@drawable/table_details_border"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvJobLevel"
+            android:text="ID"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_column="1"
+            android:background="@drawable/table_details_border"/>
+        <TextView
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:id="@+id/tvProject"
+            android:text="ID"
+            android:textSize="16sp"
+            android:padding="10dp"
+            android:layout_gravity="center"
+            android:gravity="center"
+            android:layout_column="1"
+            android:background="@drawable/table_details_border"/>
+
+</LinearLayout>
